--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,24 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
+    font-family: "Rubik","Arial",sans-serif;
+    font-size: 16px;
+    line-height: 22px;
+    background-color: #ffffff;
+    color: #4a4b4c;
 }
 
 img {
     max-width: 100%;
     height: auto;
+}
+
+/* CONTAINER */
+
+.container {
+    width: 100%;
+    max-width: 1240px;
+    padding: 0px 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
