--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+*:focus {
+    outline: 2px dashed #7296ec;
+    outline-offset: 2px;
+}
+
 html {
     height: 100%;
     scroll-behavior: smooth;
@@ -53,8 +58,6 @@ img {
 }
 
 /* SITE-HEADER */
-.site-header {
-}
 
 /* SITE-HEADER-TOP */
 .site-header-top {
@@ -86,6 +89,20 @@ img {
 
 .currency-rates-item b {
     color:#2959ce;
+}
+
+/* GLOBAL-SEARCH-FORM */
+.global-search-form{
+    margin-right: 25px;
+}
+
+.global-search-form-input {
+    border: none;
+    border-radius: 60px;
+    font-size: 14px;
+    color: #8d8d8d;
+    padding: 15px 20px 15px 40px;
+
 }
 
 /* LANGUAGE_TOGGLE */
