--- a/css/style.css
+++ b/css/style.css
@@ -162,3 +162,67 @@ img {
 .site-banner-img {
     display: flex;
 }
+
+.main-content {
+    flex-grow: 1;
+    padding-top: 50px;
+
+}
+.news-grid {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -10px;
+}
+.news-grid-item {
+    width: 393px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+}
+.article-card {
+    display: flex;
+    flex-direction: column;
+    background-color: #f6f6f6;
+    color: #4a4b4c;
+    padding: 20px 17px 15px 17px;
+    border-radius: 15px;
+}
+.article-card-title {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+.article-card-link {
+    display: inline-block;
+    text-decoration: none;
+    color:#000000;
+    font-weight: 500;
+}
+.article-card-text {
+    margin-bottom: 15px;
+}
+.article-card-img {
+    border-radius: 10px;
+    display: flex;
+    margin-bottom: 15px;
+    width: 360px;
+    height: 165px;
+    object-fit: cover;
+    margin-top: auto;
+}
+.article-card-footer {
+    display: flex;
+    align-items: center;
+}
+
+.article-card-footer img {
+    margin-right: 10px;
+    border-radius: 5px;
+    width: 10px;
+    height: 10px;
+}
+.article-card-source-time {
+    font-size: 12px;
+    color: #5e5f61;
+    line-height: normal;
+}
+.article-card-source {
+}
