--- a/css/style.css
+++ b/css/style.css
@@ -295,9 +295,12 @@ img {
     margin-bottom: 10px;
 }
 .news-article-img {
-    width: 210px;
+    width: 242px;
     height: 165px;
-    padding: 20px 15px 20px 17px;
+    margin-left: 17px;
+    margin-right: 15px;
+    border-radius: 15px;
+    object-fit: cover;
 }
 .news-article-heading {
     font-size: 20px;
